Добавлен файл про массивы, написана реализация массивов на C и сделаны некоторые правки

--- a/Computer Science/Алгоритмы/Бинарный поиск/Бинарный поиск.md
+++ b/Computer Science/Алгоритмы/Бинарный поиск/Бинарный поиск.md
@@ -16,7 +16,5 @@
 ## Сравнения
 ### Бинарный поиск и Линейный поиск
 Не нужно быть Эйнштейном чтобы догадаться что бинарный поиск намного быстрее чем линейный. О большое у линейного поиска равно n, а у бинарного log₂ n. Если у вас массив с 4 миллиардами элементами то для поиска с линейным поиском вам понадобится 4 миллиарда проверок, а с бинарным поиском вам понадобится 32 проверок, пусть 1 проверка длиться 10 мс, тогда с линейным поиском вам понадобиться 462 дня, а с бинарным поиском вам понадобится 0.32 мс.
-
-
-### Реализации:
+# Реализации
 [[Бинарный поиск Binary search Python|Python]]
