Написана реализация бинарного поиска на C и сделаны правки

--- a/Computer Science/Алгоритмы/Бинарный поиск/Бинарный поиск.md
+++ b/Computer Science/Алгоритмы/Бинарный поиск/Бинарный поиск.md
@@ -3,12 +3,11 @@
 > 
 > Теги: #Поиск #Списки #Массив
 ---
-**Бинарный поиск** - это алгоритм поиска элемента в отсортированном списке/массиве, используется деление массива на две части.
-
+**Бинарный поиск** - это алгоритм поиска элемента в отсортированном списке/[[Computer Science/Структуры данных/Массив/Массив|массиве]], используется деление [[Computer Science/Структуры данных/Массив/Массив|массива]] на две части.
 Шаги алгоритма:
-1. Пусть H - это длинна массива/списка минус 1, L - это 0, E - это элемент который нужно найти в списке/массиве
+1. Пусть H - это длинна [[Computer Science/Структуры данных/Массив/Массив|массива]]/списка минус 1, L - это 0, E - это элемент который нужно найти в списке/массиве
 2. Пусть M - Это сумма L и H поделённых на 2 без остатка, Перейти к шагу 3 если H больше или равно L, иначе закончить работу алгоритма
-3. Проверить элемент массива в M индексе, если оно больше E то перейти к 4 шагу, если оно меньше E то перейти к шагу 5, иначе вернуть M и закончить работу алгоритма
+3. Проверить элемент [[Computer Science/Структуры данных/Массив/Массив|массива]] в M индексе, если оно больше E то перейти к 4 шагу, если оно меньше E то перейти к шагу 5, иначе вернуть M и закончить работу алгоритма
 4. Изменить значение H на `M - 1` и вернуться к шагу 2
 5. Изменить значение M на `M + 1` и вернуться к шагу 2
 
@@ -22,8 +21,7 @@
 Таким образом и работает бинарный поиск.
 ### Сравнения
 ### Бинарный поиск и Линейный поиск
-Бинарный поиск намного быстрее чем линейный. 
-Для массива с 4млрд элементов бинарному поиску нужно лишь 32 проверки, а не 4млрд, как линейному.
+Бинарный поиск намного быстрее чем линейный. Для массива с 4млрд элементов бинарному поиску нужно лишь 32 проверки, а не 4млрд, как линейному.
 
 ### Реализации:
-[[Бинарный поиск Binary search Python|Python]]
+[[Бинарный поиск Binary search Python|Python]], [[Бинарный поиск Binary search|C]]
