--- a/Computer Science/Алгоритмы/Частые вопросы по алгоритмам и структурам данных с собеседований.md
+++ b/Computer Science/Алгоритмы/Частые вопросы по алгоритмам и структурам данных с собеседований.md
@@ -1,6 +1,6 @@
 # [ОТСЮДА](https://proglib.io/p/8-data-structures)
 
-### Частые вопросы о массивах
+### Частые вопросы о [[Computer Science/Структуры данных/Массив/Массив|массивах]]
 -   Найти второй минимальный элемент.
 -   Первые не повторяющиеся целые числа.
 -   [Объединить два отсортированных массива](https://pas1.ru/arrayconflux).
