--- a/Computer Science/Структуры данных/Массив/Массив.md
+++ b/Computer Science/Структуры данных/Массив/Массив.md
@@ -9,7 +9,7 @@
 Массив - Это непрерывные данные идущие друг за другом в памяти.
 Представьте что вам нужно сохранить в памяти 4 int, вам понадобится 16 байтов (4 * 4 = 16), вам нужно расположить эти байты друг за другом, таким образом вы получаете массив int. Все элементы массива должны быть одного типа данных
 Обычно размер массива не меняется, исключением является динамический массив.
-![Массив|400](Array.png)
+![Массив|500](Array.png)
 ## Динамический массив
 Динамический массив отличается от массива в том что первый может менять свой размер. Хоть в Си и C++ используется обычный массив но есть реализации динамического, `vector` например.
 # Вставка и удаление
@@ -20,5 +20,6 @@
 ![Связанный список|500](Static/LinkedList.png)
 Для вставки надо было всего лишь изменить одну ссылку элемента, в итоге вставка элемента в связанный список равна O(1).
 Связанный список также может изменять свой размер и является гибкой структурой данных
+![Вставка в связанный список|705](Static/LinkedListChange.png)
 # Реализации
-[[Языки программирования/C/all c/Data structures/Массив|C]]
+[[Массив Array|C]]
